update jupyter notebook

--- a/hbv_demo.ipynb
+++ b/hbv_demo.ipynb
@@ -6,11 +6,10 @@
       "source": [
         "# HBV demo (Python)\n",
         "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/<YOUR_GITHUB_USERNAME>/<YOUR_REPO_NAME>/blob/main/hbv_demo.ipynb)\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/lijingwang/hbvpy/blob/main/hbv_demo.ipynb)\n",
         "\n",
         "This notebook runs a minimal HBV rainfall runoff simulation using example inputs in `examples/` and visualizes all returned state and flux variables.\n",
         "\n",
-        "**Repository note**: if you fork or rename the repository, update the Colab badge link above.\n"
       ]
     },
     {
