--- a/HBV_demo.ipynb
+++ b/HBV_demo.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOciCqdi6zHqk3c20oHs8KR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +39,7 @@
         "id": "SuAc49ml-iQC",
         "outputId": "4ec373e5-13cd-4232-be8f-aa5d48fa49f7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,7 +74,7 @@
       "metadata": {
         "id": "oNK3YMtf-rkS"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +105,7 @@
       "metadata": {
         "id": "-kbZKD6A_8TX"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +121,7 @@
         "id": "Ta0DBc5dA6YD",
         "outputId": "9eebdb83-d4a0-4455-eab2-843cd32e5816"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +307,7 @@
         "id": "GOaH2DLWA7Y9",
         "outputId": "00bc50fa-928d-486e-8785-a0ef625df538"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -486,7 +485,16 @@
       "source": [
         "## Need to find your own precipitation, temperature and potential monthly ET dataset?\n",
         "\n",
-        "**To-do**\n",
+        "You can use your own source for sure. Here are just generic methods for you to find your inputs.\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   High-resolution gridded PRISM weather data, with mean temp and precipitation: https://prism.oregonstate.edu/explorer/\n",
+        "*   MODIS-ET: https://modis.gsfc.nasa.gov/data/dataprod/mod16.php.\n",
+        "*How to get MODIS-ET tutorial: https://youtu.be/cUAtYyGI9mI?si=qzb8bkKHAI_iHKb6*\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -553,7 +561,7 @@
       "metadata": {
         "id": "whWN-X4MKbNL"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,7 +580,7 @@
         "    forcing=forcing,\n",
         "    pet_monthly=pet,\n",
         "    params=params,\n",
-        "    area_km2=410.0, # catchment size 410 km2\n",
+        "    area_km2=410.0, # catchment size 410 km2 !! You need to change the catchment size/drainage area for your own site!!!\n",
         "    Tsnow_thresh=0.0, # threshold for being snow or rain\n",
         "    init_state={\"snow\": 0.0, \"soil\": 0.0, \"s1\": 0.0, \"s2\": 0.0},\n",
         ")\n",
@@ -586,7 +594,7 @@
         "id": "TR8XdoSaCYru",
         "outputId": "e5c160ef-0819-44c9-e485-c6a50d820184"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -846,7 +854,7 @@
         "id": "NDd6KL_bEvUX",
         "outputId": "e7d1a23b-3325-4a51-fb82-029ec854886f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -895,7 +903,7 @@
         "id": "NCF9xI9uIzRO",
         "outputId": "42183204-afb0-4cfc-8892-572c072b5972"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -971,7 +979,7 @@
         "id": "s2to4_b5Evhw",
         "outputId": "516da2f3-a785-435e-a225-4f70ecacc131"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1139,7 +1147,7 @@
           "height": 332
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
